FeatureIDE#1134: Addressed review comments for the Pull Request.